--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.data.elasticsearch.cluster-name=elasticsearch
 spring.data.elasticsearch.cluster-nodes=localhost:9300
 spring.data.elasticsearch.repositories.enabled=true
 
+server.port=8080
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=cbp698@gmail.com
